--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Flutter
-        uses: subosito/flutter-action@v5
+        uses: subosito/flutter-action@vX
         with:
           flutter-version: '2.x'  # Adjust to your Flutter version
 
