--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Flutter
-        uses: subosito/flutter-action@vX
+        uses: subosito/flutter-action@v2
         with:
-          flutter-version: '2.x'  # Adjust to your Flutter version
+          flutter-version: 3.10.6
 
       - name: Build Flutter Code
         run: flutter build apk  # Adjust the build command as needed
