change in event type

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,9 +1,9 @@
 name: Test flutter code
 
 on:
-  repository_dispatch:
-    types:
-      - build-and-test
+  push:
+    branches:
+      - "*"
   
 
 jobs:
