--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -20,29 +20,30 @@ jobs:
           token: ${{ secrets.PAT }} # Replace with your PAT
           repository: Hassanajmalcowlar/appiumFramworksPOC
           event-type: build-and-test
-      - name: Poll Test Workflow Status
-        run: |
-          while true; do
-            response=$(curl -s -H "Accept: application/vnd.github.v3+json" -u ${{ secrets.GITHUB_TOKEN }} https://api.github.com/repos/Hassanajmalcowlar/appiumFramworksPOC/actions/workflows/test.yml/runs/latest)
-            status=$(echo "$response" | jq -r '.status')
-            conclusion=$(echo "$response" | jq -r '.conclusion')
+      # - name: Poll Test Workflow Status
+      #   run: |
+      #     while true; do
+      #       response=$(curl -s -H "Accept: application/vnd.github.v3+json" -u ${{ secrets.GITHUB_TOKEN }} https://api.github.com/repos/Hassanajmalcowlar/appiumFramworksPOC/actions/workflows/test.yml/runs/latest)
+      #       sleep 30
+      #       status=$(echo "$response" | jq -r '.status')
+      #       conclusion=$(echo "$response" | jq -r '.conclusion')
       
-            if [ "$status" == "completed" ]; then
-              if [ "$conclusion" == "success" ]; then
-                echo "Test Workflow Status: $status"
-                echo "Test Workflow Conclusion: $conclusion"
-            else
-              echo "Test Workflow Status: $status"
-              echo "Test Workflow Conclusion: $conclusion (FAILED)"
-              exit 1
-            fi
-          break
-          elif [ "$status" == "null" ]; then
-            echo "Error: Status is null. Check your API request or repository/workflow name."
-            exit 1
-          else
-            echo "Test Workflow Status: $status"
-            echo "Test Workflow Conclusion: $conclusion"
-            sleep 30  # Adjust the polling interval as needed
-          fi
-          done 
+      #       if [ "$status" == "completed" ]; then
+      #         if [ "$conclusion" == "success" ]; then
+      #           echo "Test Workflow Status: $status"
+      #           echo "Test Workflow Conclusion: $conclusion"
+      #       else
+      #         echo "Test Workflow Status: $status"
+      #         echo "Test Workflow Conclusion: $conclusion (FAILED)"
+      #         exit 1
+      #       fi
+      #     break
+      #     elif [ "$status" == "null" ]; then
+      #       echo "Error: Status is null. Check your API request or repository/workflow name."
+      #       exit 1
+      #     else
+      #       echo "Test Workflow Status: $status"
+      #       echo "Test Workflow Conclusion: $conclusion"
+      #       sleep 30  # Adjust the polling interval as needed
+      #     fi
+      #     done 
